agregado thanks.js faltan pruebas y diseño thanks.html

--- a/thanks.html
+++ b/thanks.html
@@ -10,5 +10,6 @@
         <h1>thanks for buying</h1>
         <a href="index.html">return main page</a>
     </section>
+    <script src="./thanks.js"></script>
 </body>
 </html>
