solo falta pruebas y diseño thanks

--- a/thanks.html
+++ b/thanks.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>paypal</title>
+    <link rel="icon" href="./src/images/favicon.ico">
+    <title>Virtual Market</title>
 </head>
 <body>
     <section>
         <h1>thanks for buying</h1>
-        <a href="index.html">return main page</a>
+        <div id="data">
+            
+        </div>
+        <a class="gohome" href="index.html">return main page</a>
     </section>
-    <script src="./thanks.js"></script>
+    <script src="./src/thanks.js"></script>
 </body>
 </html>
