solo falta pruebas saldo insuficiente

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p>Menu</p>
         </div>
         <nav class="menu__fixed">
-          <a href="#">Home</a>
+          <a  href="#">Home</a>
           <a href="#experience">The experience</a>
           <a href="#catalog">Catalog</a>
           <a href="#pairing">Pairing</a>
@@ -56,10 +56,10 @@
             <p>Close</p>
           </div>
           </article>
-          <a href="#">Home</a>
-          <a href="#experience">The experience</a>
-          <a href="#products">Products</a>
-          <a href="#pairing">Pairing</a>
+          <a class="header__link" href="#">Home</a>
+          <a class="header__link" href="#experience">The experience</a>
+          <a class="header__link" href="#products">Products</a>
+          <a class="header__link" href="#pairing">Pairing</a>
           <!-- <a href="">ppppp</a> -->
        </aside>
     </header>
@@ -101,7 +101,7 @@
         </section>
       
         <!-- ************************products***no se toca************************** -->
-      <section class="products">
+      <section class="products" id="products">
         <div class="products__title">
           <h2>Products</h2>
         </div>
