--- a/thanks.html
+++ b/thanks.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./src/images/favicon.ico">
+    <link rel="stylesheet" href="./src/thanks.css">
     <title>Virtual Market</title>
 </head>
 <body>
-    <section>
-        <h1>thanks for buying</h1>
-        <div id="data">
+    <section class="thanks__body">
+        <h1>Thanks for buying</h1>
+        <!-- /////////////no se toca id//////////// -->
+        <div class="thanks__buyinfo" id="data">
             
         </div>
-        <a class="gohome" href="index.html">return main page</a>
+        <div class="thanks__returnbtn">
+            <a class="gohome" href="index.html">return main page</a>
+        </div>
+        
     </section>
     <script src="./src/thanks.js"></script>
 </body>
