--- a/index.html
+++ b/index.html
@@ -44,10 +44,6 @@
       </article>
 
 
-      <!-- ***********************mensaje info*********************** -->
-       <!-- /////////////no se toca clase//////////// -->
-      <section class="message"></section>
-
       <!-- ***************menu movil*********************** -->
        <aside class="menu__m">
           <article class="menu__m__closec">
@@ -63,6 +59,11 @@
           <!-- <a href="">ppppp</a> -->
        </aside>
     </header>
+
+    <!-- ***********************mensaje info*********************** -->
+       <!-- /////////////no se toca clase//////////// -->
+      <section class="message"></section>
+
     <main >
       <!-- ************************hero image************************** -->
        <section class="hero">
@@ -182,6 +183,7 @@
             
               
               </article>
+              <!-- <p class="shoppingcart__adv">"Do not close this window until you are redirected back to the store to confirm your order."</p> -->
               <button id="pay" class="pay__btn">Pay</button>
               <br>
               <!-- /////////////no se toca id//////////// -->
